--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
        <h3>
        	Exprence is web design and development,Tring to know new things.Try to make some new project to update portfolio.
        </h3>
+       <h3>
+       	Exprence is web design and development,Tring to know new things.Try to make some new project to update portfolio.
+       </h3>
+       <h3>
+       	Exprence is web design and development,Tring to know new things.Try to make some new project to update portfolio.
+       </h3>
+
       
      </div>
      
