--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       </h1>	
         <img src="image/iftinur.jpg">
        <h3>
-       	Exprence is web design and development,Tring to know new things.Try to make some new project to update portfolio.
+       	<label>Present job: </label>
+       	<br>
+       	Currently studing Compueter Science and Engineering at American International University(AiuB.) 
        </h3>
        <h3>
+       	<label>Interest:</label>
+       	<br>
        	Exprence is web design and development,Tring to know new things.Try to make some new project to update portfolio.
        </h3>
-       <h3>
-       	Exprence is web design and development,Tring to know new things.Try to make some new project to update portfolio.
-       </h3>
-
-      
+ 
      </div>
      
 
